# t_clibs

./: .clang-format  .gitignore  CMakeLists.txt
include/slib/: iso646.h  stddef.h  stdio.h  stdlib.h
slib/: CMakeLists.txt
slib/include/slib/: iso646.h  malloc.h  stddef.h
slib/source/slib/stdlib/: malloc_u.c  stdlib.c
source/slib/stdlib/: malloc_u.c  stdlib.c
